Day_08/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
      app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
      app: backend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
      app: database
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
